--- a/LoginPage/login.css
+++ b/LoginPage/login.css
@@ -1,4 +1,3 @@
-
 body, html{
     margin: 0;
     padding: 0;
@@ -10,18 +9,31 @@ body{
     background-color: #2a2a2a;
     display:flex;
     align-items: center;
-    justify-content: center;
 }
 
-.text{
-    color: #000000;
-    align-content: center;
-    width: 100%;
+.container{
+    display: flex;
+    width: 60%;
+    height: 600px;
+    margin: 0 auto;
+    background-color: #FFFFFF;
 }
 
-.buttonText{
-    color: #000000;
+.left1{
+    background-image: url('Zelda background.jpg');
+    height: 100%;
+    width: 45%;
+    background-size: cover;
+    background-position: 76% 0;
+}
+
+.profileTitle{
+    position: absolute;
+    color: #FFF;
     text-align: center;
     width: 100%;
 
+}
+.name{
+    font-size: 30px;
 }
